--- a/db/item_properties.yml
+++ b/db/item_properties.yml
@@ -6,7 +6,8 @@
 #    Property:
 #      AvoidConsumeForUse        避免物品被玩家主动从背包或快捷栏使用而消耗
 #      AvoidConsumeForSkill      避免物品被作为发动技能的必要道具而消耗
-#      IsAmuletItem              表示此物品是一个护身符类型的道具
+#      IsAmuletItem              用于标记此物品是一个护身符类型的道具
+#      ExecuteMobDropExpress     使此物品能触发 OnMobDropItemExpress 实时事件
 #    ControlViewID:
 #      InvisibleWhenISee         当我自己在装备面板中查看装备时隐藏外观
 #      InvisibleWhenTheySee      当其他人查看我的装备时隐藏外观
@@ -38,18 +39,41 @@
 #  
 #     AvoidConsumeForUse
 #     可选节点, 值为布尔型, 属于 Property 的子节点
-#     若设置为 true 表示: 避免物品被玩家主动从背包或快捷栏使用而消耗
-#     没有此字段, 或设为 false 表示: 会被玩家主动从背包或快捷栏使用而消耗
+#
+#     若设置为 true 表示: 
+#         避免物品被玩家主动从背包或快捷栏使用而消耗
+#     没有此字段, 或设为 false 表示:
+#         会被玩家主动从背包或快捷栏使用而消耗
+#
+#     --------------------
 #  
 #     AvoidConsumeForSkill
 #     可选节点, 值为布尔型, 属于 Property 的子节点
-#     若设置为 true 表示: 避免物品被作为发动技能的必要道具而消耗
-#     没有此字段, 或设为 false 表示: 会被当做发动技能的必要道具而消耗
+#
+#     若设置为 true 表示:
+#         避免物品被作为发动技能的必要道具而消耗
+#     没有此字段, 或设为 false 表示:
+#         会被当做发动技能的必要道具而消耗
+#
+#     --------------------
 #  
 #     IsAmuletItem
 #     可选节点, 值为布尔型, 属于 Property 的子节点
-#     若设置为 true 表示: 此物品是一个护身符类型的道具
-#     没有此字段, 或设为 false 表示: 不是护身符
+#
+#     若设置为 true 表示:
+#         此物品是一个护身符类型的道具 (下方有关于护身符的介绍)
+#     没有此字段, 或设为 false 表示:
+#         此物品不是护身符
+#
+#     --------------------
+#
+#     ExecuteMobDropExpress
+#     可选节点, 值为布尔型, 属于 Property 的子节点
+#
+#     若设置为 true 表示:
+#         此物品即将从魔物身上掉落时会触发 OnMobDropItemExpress 实时事件
+#     没有此字段, 或设为 false 表示:
+#         不触发 OnMobDropItemExpress 实时事件
 #  
 ###########################################################################
 #
@@ -61,13 +85,21 @@
 #  
 #     InvisibleWhenISee
 #     可选节点, 值为布尔型, 属于 ControlViewID 的子节点
-#     若设置为 true 表示: 当我自己在装备面板中查看装备时隐藏它的外观
-#     没有此字段, 或设为 false 表示: 不隐藏它的外观
+#
+#     若设置为 true 表示:
+#         当我自己在装备面板中查看装备时隐藏它的外观
+#     没有此字段, 或设为 false 表示:
+#         不隐藏它的外观
+#
+#     --------------------
 #
 #     InvisibleWhenTheySee
 #     可选节点, 值为布尔型, 属于 ControlViewID 的子节点
-#     若设置为 true 表示: 当其他人查看我的装备时隐藏它的外观
-#     没有此字段, 或设为 false 表示: 不隐藏它的外观
+#
+#     若设置为 true 表示:
+#         当其他人查看我的装备时隐藏它的外观
+#     没有此字段, 或设为 false 表示:
+#         不隐藏它的外观
 #
 ###########################################################################
 #
@@ -79,18 +111,31 @@
 #  
 #     DropToGround
 #     可选节点, 值为布尔型, 属于 AnnouceRules 的子节点
-#     若设置为 true 表示: 当打死魔物死亡后将道具掉落到地上时公告
-#     没有此字段, 或设为 false 表示: 该场景下不公告
+#
+#     若设置为 true 表示:
+#         当打死魔物死亡后将道具掉落到地上时公告
+#     没有此字段, 或设为 false 表示:
+#         该场景下不公告
+#
+#     --------------------
 #  
 #     DropToInventoryForMVP
 #     可选节点, 值为布尔型, 属于 AnnouceRules 的子节点
-#     若设置为 true 表示: 当打死魔物掉落 MVP 道具到玩家背包时公告
-#     没有此字段, 或设为 false 表示: 该场景下不公告
+#
+#     若设置为 true 表示:
+#         当打死魔物掉落 MVP 道具到玩家背包时公告
+#     没有此字段, 或设为 false 表示:
+#         该场景下不公告
+#
+#     --------------------
 #  
 #     StealToInventory
 #     可选节点, 值为布尔型, 属于 AnnouceRules 的子节点
-#     若设置为 true 表示: 使用"偷窃"技能从魔物身上偷到此物品时公告
-#     没有此字段, 或设为 false 表示: 该场景下不公告
+#
+#     若设置为 true 表示:
+#         使用"偷窃"技能从魔物身上偷到此物品时公告
+#     没有此字段, 或设为 false 表示:
+#         该场景下不公告
 #  
 ###########################################################################
 
@@ -108,7 +153,7 @@
 
 Header:
   Type: ITEM_PROPERTIES_DB
-  Version: 1
+  Version: 2
 
 Body:
 #  - ItemID: 2207
@@ -116,6 +161,7 @@ Body:
 #      AvoidConsumeForUse: false
 #      AvoidConsumeForSkill: false
 #      IsAmuletItem: false
+#      ExecuteMobDropExpress: false
 #    ControlViewID:
 #      InvisibleWhenISee: false
 #      InvisibleWhenTheySee: false
