--- a/conf/msg_conf/translation_cn.yml
+++ b/conf/msg_conf/translation_cn.yml
@@ -414,6 +414,8 @@ Body:
   Translation: "另外, 请检查主数据库中 login 表的内部通讯账号密码的性别, 确保设置为 S 而不是 M/F. \n"
 - Original: "Alternate Unit Id %s is invalid.\n"
   Translation: ""
+- Original: "Amount %hu exceeds %hu, skipping.\n"
+  Translation: ""
 - Original: "Amount %u exceeds the maximum of %d.\n"
   Translation: ""
 - Original: "An ammo type is required before specifying ammo amount.\n"
@@ -485,8 +487,6 @@ Body:
 - Original: "Can not open file \"%s\" for writing.\n"
   Translation: ""
 - Original: "Can't read %s\n"
-  Translation: ""
-- Original: "Can't read '[{CL_WHITE}]%s[{CL_RESET}]'... Generating DB.\n"
   Translation: ""
 - Original: "Cannot found account info for %d, requested by %d\n"
   Translation: ""
@@ -826,8 +826,6 @@ Body:
   Translation: "已读取 [{CL_WHITE}]%-5[{PRIu64}][{CL_RESET}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'[{CL_CLL}]\n"
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' channels in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 个频道, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
-- Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' entries in '[{CL_WHITE}]%s/%s[{CL_RESET}]'.\n"
-  Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 组数据, 源于 '[{CL_WHITE}]%s/%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' entries in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
   Translation: "已读取 [{CL_WHITE}]%-5d[{CL_RESET}] 组数据, 源于 '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
 - Original: "Done reading '[{CL_WHITE}]%d[{CL_RESET}]' groups in '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
@@ -870,6 +868,8 @@ Body:
   Translation: ""
 - Original: "Empty string passed to _vShowMessage().\n"
   Translation: ""
+- Original: "Entry must have a Rate for group above 0, skipping.\n"
+  Translation: ""
 - Original: "Equip item %s does not exist.\n"
   Translation: ""
 - Original: "Error found in \"%s\" while attempting to load.\nPress any key to continue.\n"
@@ -909,6 +909,8 @@ Body:
 - Original: "Failed to initialize mapcache data (%s)..\n"
   Translation: ""
 - Original: "Failed to read %s database file from '[{CL_WHITE}]%s[{CL_RESET}]'.\n"
+  Translation: ""
+- Original: "Failed to remove %s, the entry doesn't exist in Source %s.\n"
   Translation: ""
 - Original: "Failed to remove %s, the monster doesn't exist in group %s.\n"
   Translation: ""
@@ -1000,6 +1002,10 @@ Body:
   Translation: ""
 - Original: "Guild Unloaded (%d - %s)\n"
   Translation: "已卸载公会数据 (公会编号: %d - 公会名称: %s)\n"
+- Original: "Guild exp %[{PRIu64}] exceeds max of %[{PRIu64}].\n"
+  Translation: ""
+- Original: "Guild level %d exceeds maximum level %d, skipping.\n"
+  Translation: ""
 - Original: "Guild load request (%d)...\n"
   Translation: ""
 - Original: "Guild loaded (%d - %s)\n"
@@ -1062,6 +1068,8 @@ Body:
   Translation: ""
 - Original: "Invalid Abra skill name \"%s\", skipping.\n"
   Translation: "无效的随机技能名称 \"%s\", 已跳过.\n"
+- Original: "Invalid Bound %s.\n"
+  Translation: ""
 - Original: "Invalid Group %s for achievement %d, skipping.\n"
   Translation: ""
 - Original: "Invalid Magic Mushroom skill name \"%s\", skipping.\n"
@@ -1091,6 +1099,8 @@ Body:
 - Original: "Invalid element %s, skipping.\n"
   Translation: ""
 - Original: "Invalid equip location %s, defaulting to IT_ETC.\n"
+  Translation: ""
+- Original: "Invalid group %s.\n"
   Translation: ""
 - Original: "Invalid guild skill name \"%s\", skipping.\n"
   Translation: ""
@@ -1166,8 +1176,12 @@ Body:
   Translation: ""
 - Original: "Ipban connection made.\n"
   Translation: "已经与 [{CL_WHITE}]IP 封禁黑名单[{CL_RESET}] 数据库成功建立连接.\n"
+- Original: "Item %hu doesn't exist in the SubGroup %hu (group %s). Clear failed.\n"
+  Translation: ""
 - Original: "Item %s does not exist, skipping.\n"
   Translation: "物品 %s 不存在于数据库中, 已跳过.\n"
+- Original: "Item %s does not exist.\n"
+  Translation: ""
 - Original: "Item %s is not stackable, capping to 1.\n"
   Translation: ""
 - Original: "Item %u is not enough as payment at itemshop NPC '%s' (%s, %d, %d, AID=%d, CID=%d)!\n"
@@ -1219,6 +1233,8 @@ Body:
 - Original: "Large Size Fix %d for %s is out of bounds, defaulting to 100.\n"
   Translation: ""
 - Original: "Last_point_map %s - id %d not found (error code %d)\n"
+  Translation: ""
+- Original: "Level %d exceeds maximum BaseLevel %d, skipping.\n"
   Translation: ""
 - Original: "Level difference %d is bigger than maximum level %d.\n"
   Translation: ""
@@ -1293,6 +1309,8 @@ Body:
 - Original: "Map %s already loaded![{CL_CLL}]\n"
   Translation: ""
 - Original: "Map %s does not exist, skipping.\n"
+  Translation: ""
+- Original: "Map %s doesn't exist, skipping.\n"
   Translation: ""
 - Original: "Map %s is not a valid map, skipping.\n"
   Translation: "发现一张无效的地图 %s, 已跳过.\n"
@@ -1424,6 +1442,8 @@ Body:
   Translation: ""
 - Original: "Missing Target 'Mob' or 'Id', skipping.\n"
   Translation: ""
+- Original: "Missing experience for guild level %d.\n"
+  Translation: ""
 - Original: "Missing mandatory node \"%s\".\n"
   Translation: ""
 - Original: "Missing node \"%s\".\n"
@@ -1433,6 +1453,8 @@ Body:
 - Original: "Missing node \"MaxLevel\", skipping.\n"
   Translation: ""
 - Original: "Missing required node \"ItemRequirements\".\n"
+  Translation: ""
+- Original: "Missing status points for Level %d\n"
   Translation: ""
 - Original: "Missing value for option '%s'.\n"
   Translation: ""
@@ -1519,6 +1541,8 @@ Body:
 - Original: "Not all IP addresses in map_athena.conf configured, autodetecting...\n"
   Translation: "尚未在 map_athena.conf 中指定任何 IP 地址, 正在自动检测 IP 地址...\n"
 - Original: "Now at: '%s' Coords: %d %d\n"
+  Translation: ""
+- Original: "Npc name %s too long, skipping.\n"
   Translation: ""
 - Original: "OPTION_CART was replace by SC_PUSH_CART, skipping.\n"
   Translation: ""
@@ -1614,7 +1638,7 @@ Body:
   Translation: "已收到角色服务器传来的 '[{CL_WHITE}]%d[{CL_RESET}]' 个部落信息.\n"
 - Original: "Received '[{CL_WHITE}]%d[{CL_RESET}]' guild castles from char-server.\n"
   Translation: "已收到角色服务器传来的 '[{CL_WHITE}]%d[{CL_RESET}]' 个公会城堡信息.\n"
-- Original: "Received '[{CL_WHITE}]%d[{CL_RESET}]' storage info from inter-server.\n"
+- Original: "Received '[{CL_WHITE}][{PRIdPTR}][{CL_RESET}]' storage info from inter-server.\n"
   Translation: ""
 - Original: "Received Fame List of '[{CL_WHITE}]%d[{CL_RESET}]' characters.\n"
   Translation: "已收到角色服务器传来的 '[{CL_WHITE}]%d[{CL_RESET}]' 个角色声望数据.\n"
@@ -1648,8 +1672,8 @@ Body:
   Translation: "账号为 %s 的玩家请求从 %s 进行连接\n"
 - Original: "Request guild bound item(s) retrieval for CID = [{CL_WHITE}]%d[{CL_RESET}], AID = %d, Guild ID = [{CL_WHITE}]%d[{CL_RESET}].\n"
   Translation: ""
-- Original: "Requested '[{CL_WHITE}]%d[{CL_RESET}]' guild castles from char-server...\n"
-  Translation: "已向角色服务器请求获取 '[{CL_WHITE}]%d[{CL_RESET}]' 个公会城堡信息...\n"
+- Original: "Requested '[{CL_WHITE}]%[{PRIdPTR}][{CL_RESET}]' guild castles from char-server...\n"
+  Translation: "已向角色服务器请求获取 '[{CL_WHITE}][{PRIdPTR}][{CL_RESET}]' 个公会城堡信息...\n"
 - Original: "Requested non-existant character id: %d!\n"
   Translation: "请求加载的角色数据不存在 (角色编号: %d)\n"
 - Original: "Required guild skill \"%s\" with Id %u is out of the guild skill range [%u-%u], skipping.\n"
@@ -1798,7 +1822,13 @@ Body:
   Translation: "开始检查数据库表格和字段的完整性.\n"
 - Original: "Start point %s not found in map-index cache. Setting to default location.\n"
   Translation: ""
+- Original: "Status points for Level 1 (=%d) do not match inter_athena.conf value (=%d).\n"
+  Translation: ""
+- Original: "Storage %d has been saved (AID: %d).\n"
+  Translation: ""
 - Original: "Storage has been saved (AID: %d).\n"
+  Translation: ""
+- Original: "SubGroup 0 is reserved for item without Rate ('must' item). Defaulting Rate to 0.\n"
   Translation: ""
 - Original: "Subnet check [%u.%u.%u.%u]: Matches [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
   Translation: "子网检查 [%u.%u.%u.%u]: 已匹配到 [{CL_CYAN}]%u.%u.%u.%u/%u.%u.%u.%u[{CL_RESET}]\n"
@@ -1834,6 +1864,8 @@ Body:
   Translation: "正在结束...\n"
 - Original: "The Map-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
   Translation: "地图服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u, 总计耗时 %[{PRIu64}] 毫秒).\n\n"
+- Original: "The SubGroup %hu doesn't exist in the group %s. Clear failed.\n"
+  Translation: ""
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d).\n\n"
   Translation: "角色服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %d).\n\n"
 - Original: "The char-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %d, took %[{PRIu64}] milliseconds).\n\n"
@@ -1844,12 +1876,16 @@ Body:
   Translation: "内部通讯账号密码通常设置在 map_athena.conf 和 char_athena.conf 文件中.\n"
 - Original: "The file \"%s\" already exists.\nDo you want to replace it? (Y/N)\n"
   Translation: "[{CL_YELLOW}][注意][{CL_RESET}]: 转换后即将输出的 \"%s\" 已经有文件存在.\n[{CL_CYAN}][选择][{CL_RESET}]: 你是否需要覆盖它? 这是最后一次确认. (Y/N)\n"
+- Original: "The group %s must start with 'IG_'.\n"
+  Translation: ""
 - Original: "The group %s must start with 'MOBG_'.\n"
   Translation: ""
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u).\n\n"
   Translation: "登录服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u).\n\n"
 - Original: "The login-server is [{CL_GREEN}]ready[{CL_RESET}] (Server is listening on the port %u, took %[{PRIu64}] milliseconds).\n\n"
   Translation: "登录服务器已经[{CL_GREEN}]准备就绪[{CL_RESET}] (监听端口为 %u, 总计耗时 %[{PRIu64}] 毫秒).\n\n"
+- Original: "The minimum guild level is 1.\n"
+  Translation: ""
 - Original: "The minimum level is 1.\n"
   Translation: ""
 - Original: "The server communication passwords (default s1/p1) are probably invalid.\n"
@@ -1919,6 +1955,10 @@ Body:
 - Original: "Unit Target %s is invalid.\n"
   Translation: ""
 - Original: "Unit requires an Id.\n"
+  Translation: ""
+- Original: "Unknown Item %s.\n"
+  Translation: ""
+- Original: "Unknown Item %s. Clear failed.\n"
   Translation: ""
 - Original: "Unknown account (account: %s, ip: %s)\n"
   Translation: "客户端试图登录无效的账号 (账号: '%s', IP地址: %s)\n"
@@ -3526,6 +3566,12 @@ Body:
   Translation: ""
 - Original: "get_percentage_exp: result percentage too high! (a=%[{PRIu64}],b=%[{PRIu64}],result=%g)\n"
   Translation: ""
+- Original: "get_random_entry: Invalid group id %hu.\n"
+  Translation: ""
+- Original: "get_random_entry: No item entries for group id %hu and sub group %hu.\n"
+  Translation: ""
+- Original: "get_random_entry: No item entries for group id %hu.\n"
+  Translation: ""
 - Original: "get_val2_num: Invalid call. Variable %s is a numeric type.\n"
   Translation: ""
 - Original: "get_val2_num: Invalid call. Variable %s is not a numeric type.\n"
@@ -3742,12 +3788,6 @@ Body:
   Translation: ""
 - Original: "invincible_timer %d != %d\n"
   Translation: ""
-- Original: "itemdb_get_randgroupitem: Invalid group id %d\n"
-  Translation: ""
-- Original: "itemdb_get_randgroupitem: Invalid sub_group %d\n"
-  Translation: ""
-- Original: "itemdb_get_randgroupitem: No item entries for group id %d and sub group %d\n"
-  Translation: ""
 - Original: "itemdb_parse_roulette_db: Level %d has %d items, %d are required. Filling with Apples...\n"
   Translation: "itemdb_parse_roulette_db: 大乐透第 %d 层只有 %d 个物品 (至少需要 %d 个), 不足的使用苹果填充...\n"
 - Original: "itemdb_parse_roulette_db: Unknown item ID '%u' in level '%d'\n"
@@ -3757,8 +3797,6 @@ Body:
 - Original: "itemdb_parse_roulette_db: Unsupported flag '%d' for item ID '%u' in level '%d'\n"
   Translation: ""
 - Original: "itemdb_parse_roulette_db: level %d has %d items, only %d supported, capping...\n"
-  Translation: ""
-- Original: "itemdb_pc_get_itemgroup: Invalid group id '%d' specified.\n"
   Translation: ""
 - Original: "itemdb_read_combos(#1): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
   Translation: ""
@@ -3790,20 +3828,10 @@ Body:
   Translation: ""
 - Original: "itemdb_read_group: Insufficient columns (found %d, need at least 3).\n"
   Translation: ""
-- Original: "itemdb_read_group: Invalid group ID '%s'\n"
-  Translation: ""
-- Original: "itemdb_read_group: Invalid sub group '%d' for group '%s'\n"
-  Translation: ""
-- Original: "itemdb_read_group: Item Group '%s' has been cleared.\n"
-  Translation: ""
-- Original: "itemdb_read_group: Item Group '%s' has not been cleared, because it did not exist.\n"
-  Translation: ""
 - Original: "itemdb_read_group: Non-existant item '%s'\n"
   Translation: "itemdb_read_group: 不存在的物品 '%s'\n"
 - Original: "itemdb_read_group: Random item must have a probability. Group '%s'\n"
   Translation: ""
-- Original: "itemdb_read_group: Unknown group constant \"%s\".\n"
-  Translation: "itemdb_read_group: 无效的分组常量: \"%s\".\n"
 - Original: "itemdb_read_noequip: Invalid item id %u.\n"
   Translation: "itemdb_read_noequip: 无效的物品编号 %u, 请确认是否已定义此物品.\n"
 - Original: "itemdb_read_randomopt(#1): Invalid format (Script column) in line %d of \"%s\", skipping.\n"
@@ -4494,6 +4522,8 @@ Body:
   Translation: ""
 - Original: "pc_follow_timer %d != %d\n"
   Translation: ""
+- Original: "pc_get_itemgroup: Invalid group id '%d' specified.\n"
+  Translation: ""
 - Original: "pc_getcash: Cash point overflow (cash=%d, have cash=%d, account_id=%d, char_id=%d).\n"
   Translation: ""
 - Original: "pc_getcash: Kafra point overflow (points=%d, have points=%d, account_id=%d, char_id=%d).\n"
@@ -4602,7 +4632,7 @@ Body:
   Translation: ""
 - Original: "pc_reg_received: Failed to properly remove player %d:%d from logging db!\n"
   Translation: ""
-- Original: "pc_resetstate: Can't reset stats of %d:%d, the base level (%d) is greater than the max level supported (%d)\n"
+- Original: "pc_resetstate: Capping the Level to %d to reset the stats of %d:%d, the base level (%d) is greater than the max level supported.\n"
   Translation: ""
 - Original: "pc_setparam: Attempted to set unknown parameter '%lld'.\n"
   Translation: ""
@@ -5008,11 +5038,7 @@ Body:
   Translation: ""
 - Original: "skill_parse_row_changematerialdb: Not supported item ID (%u) for Change Material. \n"
   Translation: "skill_parse_row_changematerialdb: 无效的物品编号 %u 不能用于物品改造 (Change Material) 的技能数据库.\n"
-- Original: "skill_parse_row_createarrowdb: Arrow creation with Material ID %u removed from list.\n"
-  Translation: ""
 - Original: "skill_parse_row_createarrowdb: Invalid item %u.\n"
-  Translation: ""
-- Original: "skill_parse_row_createarrowdb: Maximum db entries reached.\n"
   Translation: ""
 - Original: "skill_parse_row_producedb: Invalid item %u.\n"
   Translation: "skill_parse_row_producedb: 无效的物品编号 %u, 请确认是否已定义此物品.\n"
