--- a/conf/atcommands.yml
+++ b/conf/atcommands.yml
@@ -976,7 +976,7 @@ Body:
   - Command: reloadstatusdb
     Help: |
       重新加载状态配置文档
-  - Command: reloadbartersdb
+  - Command: reloadbarterdb
     Help: |
       重新加载 Barters 以物易物数据库
   - Command: reload
